fix: DEV-3487 Align comment icons into the same columns with annotation and drafts in dropdown selector (#943)
* fix: DEV-3487 Align comment icons into the same columns with annotation and drafts in dropdown selector

* more idiomatic way to style without breaking original structure

--- a/src/components/TopBar/Annotations.styl
+++ b/src/components/TopBar/Annotations.styl
@@ -41,8 +41,16 @@
 
   &__icons
     display flex
-    justify-content center
+    justify-content flex-end
     align-items center
+
+  &__icon-column
+    display flex
+    align-items center
+    justify-content center
+    &:nth-child(2)
+      width: 32px
+      height: 32px
 
   &__name
     flex 1
